2007-11-08  Benjamin Mack  <mack@xnos.org>

	* (cleanup) Fixed #6670: Added tabs to Page properties + cleanup (Thanks to Steffen Kamper)

2007-11-08  Oliver Hader  <oh@inpublica.de>

	* Updated JavaScript frameworks in typo3/contrib: prototype (1.6.0) and script.aculo.us (1.8.0)

2007-11-07  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added feature #6668: Let htmlArea RTE use the Ajax request of the Prototype framework

2007-11-07  Benjamin Mack  <mack@xnos.org>

	* (minor) sysext "opendocs" is now installed by default

2007-11-07  Oliver Hader  <oh@inpublica.de>

	* (major) Fixed bug #5772: IRRE - Combination mode doesn't save new child records correctly
	* (minor) Fixed bug #6456: IRRE - Palettes are not rendered correctly on nesting records using the same table

2007-11-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Added SVN properties on some rtehtmlarea files
	* Feature 6579 continued: Make InlineCSS plugin use the RTE extension and plugin API

2007-11-05  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature 6579 continued: Use prototype.js to create a htmlArea plugin class.
	* Added feature #6657: Extract inline buttons from htmlArea RTE main scripts.

2007-11-05  Ingmar Schlecht  <ingmar@typo3.org>

	* Issue #6641: Renamed new page tree related TSconfig Options and switched off separateNotinmenuPages by default (Thanks to Christian Kuhn)
	* Changing SVN property eol-style from native to LF for all text files in the core trunk

2007-11-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Added default SVN properties and Id marker to new files which didn't have it yet
	* Fixed bug #6624: Weird pagetree display with new "Not in menu" feature (Thanks to Christian Kuhn)
	* Bug #6561 revised: Registers IMAGE_NUM and IMAGE_NUM_CURRENT contained incorrect array indizes (Thanks to Helmut Hummel)

2007-11-02  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed feature #6579: Small correction to FE htmlArea RTE